--- a/index.html
+++ b/index.html
@@ -6,71 +6,127 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | [Challenge Name Here]</title>
+  <title>Frontend Mentor | Testimonials grid section</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="assets/css/style.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap" rel="stylesheet"> 
 </head>
 <body>
-  Daniel Clifford
-  Verified Graduate
 
-  I received a job offer mid-course, and the subjects I learned were current, if not more so, 
-  in the company I joined. I honestly feel I got every penny’s worth.
+  <main class="container">
+    <div class="grid span-column-2">
+      <div class="grid__quote">
+        <img src="assets/images/bg-pattern-quotation.svg" alt="Quote">
+      </div>
 
-  “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a 
-  transition and have heard some people who had an amazing experience here. I signed up 
-  for the free intro course and found it incredibly fun! I enrolled shortly thereafter. 
-  The next 12 weeks was the best - and most grueling - time of my life. Since completing 
-  the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
+      <div class="grid__user">
+        <div class="grid__user__img">
+          <img src="assets/images/image-daniel.jpg" alt="Profile img">
+        </div>
 
-  Jonathan Walters
-  Verified Graduate
+        <div class="grid__user__info">
+          <h2>Daniel Clifford</h2>
 
-  The team was very supportive and kept me motivated
+          <p>Verified Graduate</p>
+        </div>
+      </div>
 
-  “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
-  for a big company. This was one of the best investments I’ve made in myself. ”
+      <div class="grid__text">
+        <h2>I received a job offer mid-course, and the subjects I learned were current, if not more so, in the company I joined. I honestly feel I got every penny’s worth.</h2>
 
-  Jeanette Harmon
-  Verified Graduate
+        <p>“ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter. The next 12 weeks was the best - and most grueling - time of my life. Since completing the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”</p>
+      </div>
+    </div>
+    
+    <div class="grid">
+      <div class="grid__user">
+        <div class="grid__user__img">
+          <img src="assets/images/image-jonathan.jpg" alt="Profile img">
+        </div>
 
-  An overall wonderful and rewarding experience
+        <div class="grid__user__info">
+          <h2>Jonathan Walters</h2>
 
-  “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
-  while doing something I love. ”
+          <p>Verified Graduate</p>
+        </div>
+      </div>
 
-  Patrick Abrams
-  Verified Graduate
+      <div class="grid__text">
+        <h2>The team was very supportive and kept me motivated</h2>
 
-  Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
-  learning from their experiences was easy.
+        <p>“ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer for a big company. This was one of the best investments I’ve made in myself. ”</p>
+      </div>
+    </div>
 
-  “ The staff seem genuinely concerned about my progress which I find really refreshing. The program 
-  gave me the confidence necessary to be able to go out in the world and present myself as a capable 
-  junior developer. The standard is above the rest. You will get the personal attention you need from 
-  an incredible community of smart and amazing people. ”
+    <div class="grid span-row-2">
+      <div class="grid__user">
+        <div class="grid__user__img">
+          <img src="assets/images/image-kira.jpg" alt="Profile img">
+        </div>
 
-  Kira Whittle
-  Verified Graduate
+        <div class="grid__user__info">
+          <h2>Kira Whittle</h2>
 
-  Such a life-changing experience. Highly recommended!
+          <p>Verified Graduate</p>
+        </div>
+      </div>
 
-  “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
-  professionals who can help me learn programming step by step. I was encouraged to enroll by a former 
-  student of theirs who can only say wonderful things about the program. The entire curriculum and staff 
-  did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team 
-  project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial 
-  could ever have. In fact, I’ve often referred to it during interviews as an example of my developent 
-  experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 
-  100% recommend! ”
+      <div class="grid__text">
+        <h2>Such a life-changing experience. Highly recommended!</h2>
+
+        <p>“ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from professionals who can help me learn programming step by step. I was encouraged to enroll by a former student of theirs who can only say wonderful things about the program. The entire curriculum and staff did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial could ever have. In fact, I’ve often referred to it during interviews as an example of my developent experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 100% recommend! ”</p>
+      </div>
+    </div>
+    
+    <div class="grid">
+      <div class="grid__user">
+        <div class="grid__user__img">
+          <img src="assets/images/image-jeanette.jpg" alt="Profile img">
+        </div>
+
+        <div class="grid__user__info">
+          <h2>Jeanette Harmon</h2>
+
+          <p>Verified Graduate</p>
+        </div>
+      </div>
+
+      <div class="grid__text">
+        <h2>An overall wonderful and rewarding experience</h2>
+
+        <p>“ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living while doing something I love. ”</p>
+      </div>
+    </div>
+
+    <div class="grid span-column-2">
+      <div class="grid__user">
+        <div class="grid__user__img">
+          <img src="assets/images/image-patrick.jpg" alt="Profile img">
+        </div>
+
+        <div class="grid__user__info">
+          <h2>Patrick Abrams</h2>
+
+          <p>Verified Graduate</p>
+        </div>
+      </div>
+
+      <div class="grid__text">
+        <h2>Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and learning from their experiences was easy.</h2>
+
+        <p>“ The staff seem genuinely concerned about my progress which I find really refreshing. The program gave me the confidence necessary to be able to go out in the world and present myself as a capable junior developer. The standard is above the rest. You will get the personal attention you need from an incredible community of smart and amazing people. ”</p>
+      </div>
+    </div>
+  </main>
+
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  
+  <footer class="attribution">
+    Challenge by <h1><a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a></h1>. 
+    Coded by <a href="https://www.frontendmentor.io/profile/EstebanPechuan">Esteban Pechuan</a>.
+  </footer>
 </body>
 </html>
